// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should return correct shape 1`] = `
Object {
  "closeMiniCart": [Function],
  "configurableThumbnailSource": "parent",
  "errorMessage": "Hey I am a mutation error, Hey I am another mutation error",
  "handleEditCart": [Function],
  "handleProceedToCheckout": [Function],
  "handleRemoveItem": [Function],
  "loading": false,
  "productList": Array [
    Object {
      "configurable_options": Array [
        Object {
          "label": "Color",
          "value": "red",
        },
      ],
      "id": "p1",
      "prices": Object {
        "price": Object {
          "currency": "USD",
          "value": 420,
        },
      },
      "product": Object {
        "name": "P1",
        "thumbnail": Object {
          "url": "www.venia.com/p1",
        },
      },
      "quantity": 10,
    },
  ],
  "storeUrlSuffix": ".html",
  "subTotal": 4200,
  "totalQuantity": 10,
}
`;

exports[`handleRemoveItem() should dispatch event 1`] = `
Object {
  "payload": Object {
    "cartId": "1234",
    "product": undefined,
  },
  "type": "MINI_CART_REMOVE_ITEM",
}
`;

exports[`should dispatch event when mini cart is open 1`] = `
Object {
  "payload": Object {
    "cartId": "1234",
    "products": Array [
      Object {
        "configurable_options": Array [
          Object {
            "label": "Color",
            "value": "red",
          },
        ],
        "id": "p1",
        "prices": Object {
          "price": Object {
            "currency": "USD",
            "value": 420,
          },
        },
        "product": Object {
          "name": "P1",
          "thumbnail": Object {
            "url": "www.venia.com/p1",
          },
        },
        "quantity": 10,
      },
    ],
  },
  "type": "MINI_CART_VIEW",
}
`;

exports[`handleRemoveItem() should dispatch event 1`] = `
Object {
  "payload": Object {
    "cartId": "1234",
    "product": Object {
      "configurable_options": Array [
        Object {
          "label": "Color",
          "value": "red",
        },
      ],
      "id": "p1",
      "prices": Object {
        "price": Object {
          "currency": "USD",
          "value": 420,
        },
      },
      "product": Object {
        "name": "P1",
        "thumbnail": Object {
          "url": "www.venia.com/p1",
        },
      },
      "quantity": 10,
    },
  },
  "type": "MINI_CART_REMOVE_ITEM",
}
`;
